k8s/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: postgres-backend
  namespace: food-management

spec:
  serviceName: postgres-service
  replicas: 1

  selector:
    matchLabels:
      app: postgres-backend

  template:
    metadata:
      labels:
        app: postgres-backend

    spec:
      containers:
        - name: postgres
          image: postgres:16

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
    - metadata:
        name: postgres-data

      spec:
        accessModes:
          - ReadWriteOnce

        resources:
          requests:
            storage: 1Gi
