k8s/django-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: django-service
  namespace: food-management

spec:
  selector:
    app: django-backend

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: ClusterIP
