k8s/postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres-service
  namespace: food-management

spec:
  selector:
    app: postgres-backend

  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

  type: ClusterIP
