k8s/django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: django-ingress
  namespace: food-management

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 8000
